--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# codeblock 1 test test test"
+    "# codeblock 1 test test test\n",
+    "\n",
+    "# hinzufügung"
    ]
   },
   {
@@ -16,8 +18,7 @@
    "outputs": [],
    "source": [
     "# codeblock 2 test test test\n",
-    "\n",
-    "# tetsetestest"
+    "\n"
    ]
   }
  ],
