--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# codeblock 1 test test test"
+    "# codeblock 1\n",
+    "\n",
+    "import pandas as pd\n"
    ]
   },
   {
