--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     "# codeblock 2 test test test\n",
-    "\n"
+    "\n",
+    "# block 2 ist verändert"
    ]
   }
  ],
