--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# codeblock 1 test test test"
+    "# codeblock 1 test test test\n",
+    "\n",
+    "# testtestest"
    ]
   },
   {
@@ -21,10 +23,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.9.12 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.9.12"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d12e26f72a40d5c48233c54861fca038d6a92135fc0e5e920944e69c69b6b29d"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
