added name to my block

--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# codeblock 1 test test test\n",
+    "# codeblock 1: Simon\n",
     "\n",
     "# testtestest"
    ]
