--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# codeblock 1 test test test"
+    "# Preprocessing Tobi"
    ]
   },
   {
@@ -14,11 +12,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# codeblock 2 test test test\n",
-    "\n",
-    "# block 2 ist verändert"
+    "# ROC AUC Simon"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
