--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -12,7 +12,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mushrooms_train = pd.read_csv('data/train.csv')\n",
+    "mushrooms_test = pd.read_csv('data/test.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
