preliminary data analysis

--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +48,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "mushrooms_train = pd.read_csv('data/train.csv')\n",
     "mushrooms_test = pd.read_csv('data/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cap.shape \n",
+      " x    2935\n",
+      "f    2534\n",
+      "k     652\n",
+      "b     349\n",
+      "s      28\n",
+      "c       1\n",
+      "Name: cap.shape, dtype: int64 \n",
+      "\n",
+      "cap.color \n",
+      " n    1823\n",
+      "g    1487\n",
+      "e    1197\n",
+      "y     848\n",
+      "w     823\n",
+      "b     143\n",
+      "p     117\n",
+      "c      34\n",
+      "u      14\n",
+      "r      13\n",
+      "Name: cap.color, dtype: int64 \n",
+      "\n",
+      "bruises \n",
+      " False    3764\n",
+      "True     2735\n",
+      "Name: bruises, dtype: int64 \n",
+      "\n",
+      "stalk.color.above.ring \n",
+      " w    3537\n",
+      "p    1536\n",
+      "g     452\n",
+      "n     358\n",
+      "b     346\n",
+      "o     156\n",
+      "e      78\n",
+      "c      29\n",
+      "y       7\n",
+      "Name: stalk.color.above.ring, dtype: int64 \n",
+      "\n",
+      "stalk.color.below.ring \n",
+      " w    3481\n",
+      "p    1494\n",
+      "g     467\n",
+      "n     421\n",
+      "b     352\n",
+      "o     156\n",
+      "e      80\n",
+      "c      29\n",
+      "y      19\n",
+      "Name: stalk.color.below.ring, dtype: int64 \n",
+      "\n",
+      "population \n",
+      " v    3219\n",
+      "y    1392\n",
+      "s     993\n",
+      "n     320\n",
+      "a     302\n",
+      "c     273\n",
+      "Name: population, dtype: int64 \n",
+      "\n",
+      "Id \n",
+      " 6573    1\n",
+      "1895    1\n",
+      "5789    1\n",
+      "6187    1\n",
+      "2508    1\n",
+      "       ..\n",
+      "6206    1\n",
+      "4658    1\n",
+      "5000    1\n",
+      "6381    1\n",
+      "373     1\n",
+      "Name: Id, Length: 6499, dtype: int64 \n",
+      "\n",
+      "poisonous \n",
+      " 0    3342\n",
+      "1    3157\n",
+      "Name: poisonous, dtype: int64 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in mushrooms_train.columns:\n",
+    "    print(column, '\\n', mushrooms_train[column].value_counts().sort_values(ascending=False), '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Id \n",
+      " 0 \n",
+      "\n",
+      "cap.shape \n",
+      " 0 \n",
+      "\n",
+      "cap.color \n",
+      " 0 \n",
+      "\n",
+      "stalk.color.above.ring \n",
+      " 0 \n",
+      "\n",
+      "stalk.color.below.ring \n",
+      " 0 \n",
+      "\n",
+      "bruises \n",
+      " 0 \n",
+      "\n",
+      "population \n",
+      " 0 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in mushrooms_test.columns:\n",
+    "    print(column, '\\n', mushrooms_test[column].isna().sum(), '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = mushrooms_train.drop(['poisonous'], axis=1)\n",
+    "y = mushrooms_train['poisonous']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1337)"
    ]
   },
   {
@@ -78,7 +224,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.5"
   },
   "orig_nbformat": 4,
