--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -25,12 +25,14 @@
     "# Simon\n",
     "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
@@ -68,7 +70,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#define metrics\n",
+    "y_pred_proba = [model].predict_proba(X_test)[::,1]\n",
+    "fpr, tpr, _ = roc_auc_score.roc_curve(y_test,  y_pred_proba)\n",
+    "\n",
+    "#create ROC curve\n",
+    "plt.plot(fpr,tpr)\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
