--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -217,15 +217,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#define metrics\n",
-    "y_pred_proba = [model].predict_proba(X_test)[::,1]\n",
-    "fpr, tpr, _ = roc_auc_score.roc_curve(y_test,  y_pred_proba)\n",
+    "# function to print AUROC for a specific model, X_test and y_test data\n",
     "\n",
-    "#create ROC curve\n",
-    "plt.plot(fpr,tpr)\n",
-    "plt.ylabel('True Positive Rate')\n",
-    "plt.xlabel('False Positive Rate')\n",
-    "plt.show()"
+    "def printROC (model, X_test, y_test):\n",
+    "\n",
+    "    #define metrics\n",
+    "    y_pred_proba = model.predict_proba(X_test)[::,1]\n",
+    "    fpr, tpr, _ = roc_auc_score.roc_curve(y_test,  y_pred_proba)\n",
+    "    auc = roc_auc_score(y_test, y_pred_proba)\n",
+    "\n",
+    "    #create ROC curve\n",
+    "    plt.plot(fpr,tpr,label=\"AUC=\"+str(auc))\n",
+    "    plt.ylabel('True Positive Rate')\n",
+    "    plt.xlabel('False Positive Rate')\n",
+    "    plt.legend(loc=4)\n",
+    "    plt.show()"
    ]
   }
  ],
