changed name of function to plotAUROC

--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -340,7 +340,7 @@
     }
    ],
    "source": [
-    "printROC(random_forest, X_train, y_train)"
+    "plotROC(random_forest, X_train, y_train)"
    ]
   }
  ],
