add AUROC function

--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -295,19 +295,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "probs = random_forest.predict_proba(X_test)\n",
-    "preds = probs[:,1]\n",
-    "fpr, tpr, threshold = metrics.roc_curve(y_test, preds)\n",
-    "roc_auc = metrics.auc(fpr, tpr)"
+    "def plotAUROC(model, X_test, y_test):\n",
+    "    probs = model.predict_proba(X_test)\n",
+    "    preds = probs[:,1]\n",
+    "    fpr, tpr, threshold = metrics.roc_curve(y_test, preds)\n",
+    "    roc_auc = metrics.auc(fpr, tpr)\n",
+    "\n",
+    "    plt.title('Receiver Operating Characteristic')\n",
+    "    plt.plot(fpr, tpr, 'b', label = 'AUC = %0.2f' % roc_auc)\n",
+    "    plt.legend(loc = 'lower right')\n",
+    "    plt.plot([0, 1], [0, 1],'r--')\n",
+    "    plt.xlim([0, 1])\n",
+    "    plt.ylim([0, 1])\n",
+    "    plt.ylabel('True Positive Rate')\n",
+    "    plt.xlabel('False Positive Rate')\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -324,15 +335,7 @@
     }
    ],
    "source": [
-    "plt.title('Receiver Operating Characteristic')\n",
-    "plt.plot(fpr, tpr, 'b', label = 'AUC = %0.2f' % roc_auc)\n",
-    "plt.legend(loc = 'lower right')\n",
-    "plt.plot([0, 1], [0, 1],'r--')\n",
-    "plt.xlim([0, 1])\n",
-    "plt.ylim([0, 1])\n",
-    "plt.ylabel('True Positive Rate')\n",
-    "plt.xlabel('False Positive Rate')\n",
-    "plt.show()"
+    "plotAUROC(random_forest, X_test, y_test)"
    ]
   },
   {
@@ -344,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +387,7 @@
     }
    ],
    "source": [
-    "plotROC(random_forest, X_train, y_train)"
+    "plotAUROC(random_forest, X_train, y_train)"
    ]
   },
   {
