--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -9,14 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Tobi\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "import sklearn.metrics as metrics"
+    "import sklearn.metrics as metrics\n",
+    "from xgboost import XGBClassifier"
    ]
   },
   {
@@ -247,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apply pipe to data"
+    "## Apply pipe to data"
    ]
   },
   {
@@ -259,6 +260,43 @@
     "X = pd.DataFrame.sparse.from_spmatrix(preprocessor.fit_transform(X))\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1337)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot AUROC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plotAUROC(model, X_test, y_test):\n",
+    "    probs = model.predict_proba(X_test)\n",
+    "    preds = probs[:,1]\n",
+    "    fpr, tpr, threshold = metrics.roc_curve(y_test, preds)\n",
+    "    roc_auc = metrics.auc(fpr, tpr)\n",
+    "\n",
+    "    plt.title('Receiver Operating Characteristic')\n",
+    "    plt.plot(fpr, tpr, 'b', label = 'AUC = %0.2f' % roc_auc)\n",
+    "    plt.legend(loc = 'lower right')\n",
+    "    plt.plot([0, 1], [0, 1],'r--')\n",
+    "    plt.xlim([0, 1])\n",
+    "    plt.ylim([0, 1])\n",
+    "    plt.ylabel('True Positive Rate')\n",
+    "    plt.xlabel('False Positive Rate')\n",
+    "    plt.show()"
    ]
   },
   {
@@ -294,26 +332,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def plotAUROC(model, X_test, y_test):\n",
-    "    probs = model.predict_proba(X_test)\n",
-    "    preds = probs[:,1]\n",
-    "    fpr, tpr, threshold = metrics.roc_curve(y_test, preds)\n",
-    "    roc_auc = metrics.auc(fpr, tpr)\n",
+    "# XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "sequence item 0: expected str instance, int found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\tobia\\Documents\\Bootcamp\\repos\\mushroom-classifier\\mushrooms.ipynb Cell 21\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tobia/Documents/Bootcamp/repos/mushroom-classifier/mushrooms.ipynb#X64sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m xgboost \u001b[39m=\u001b[39m XGBClassifier(random_state\u001b[39m=\u001b[39m\u001b[39m1337\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tobia/Documents/Bootcamp/repos/mushroom-classifier/mushrooms.ipynb#X64sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m xgboost\u001b[39m.\u001b[39mfit(X_train\u001b[39m.\u001b[39mto_numpy(), y_train)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/tobia/Documents/Bootcamp/repos/mushroom-classifier/mushrooms.ipynb#X64sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m y_pred_train \u001b[39m=\u001b[39m xgboost\u001b[39m.\u001b[39;49mpredict(X_train)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tobia/Documents/Bootcamp/repos/mushroom-classifier/mushrooms.ipynb#X64sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m y_pred_test \u001b[39m=\u001b[39m xgboost\u001b[39m.\u001b[39mpredict(X_test)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tobia/Documents/Bootcamp/repos/mushroom-classifier/mushrooms.ipynb#X64sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mAccuracy on train-set: \u001b[39m\u001b[39m'\u001b[39m, accuracy_score(y_true \u001b[39m=\u001b[39m y_train, y_pred \u001b[39m=\u001b[39m y_pred_train))\n",
+      "File \u001b[1;32mc:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\xgboost\\sklearn.py:785\u001b[0m, in \u001b[0;36mXGBClassifier.predict\u001b[1;34m(self, data, output_margin, ntree_limit, validate_features)\u001b[0m\n\u001b[0;32m    748\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpredict\u001b[39m(\u001b[39mself\u001b[39m, data, output_margin\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, ntree_limit\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, validate_features\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[0;32m    749\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    750\u001b[0m \u001b[39m    Predict with `data`.\u001b[39;00m\n\u001b[0;32m    751\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    783\u001b[0m \u001b[39m    prediction : numpy array\u001b[39;00m\n\u001b[0;32m    784\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 785\u001b[0m     test_dmatrix \u001b[39m=\u001b[39m DMatrix(data, missing\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmissing, nthread\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mn_jobs)\n\u001b[0;32m    786\u001b[0m     \u001b[39mif\u001b[39;00m ntree_limit \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    787\u001b[0m         ntree_limit \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mbest_ntree_limit\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m0\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\xgboost\\core.py:378\u001b[0m, in \u001b[0;36mDMatrix.__init__\u001b[1;34m(self, data, label, missing, weight, silent, feature_names, feature_types, nthread)\u001b[0m\n\u001b[0;32m    375\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_feature_types \u001b[39m=\u001b[39m feature_types\n\u001b[0;32m    376\u001b[0m     \u001b[39mreturn\u001b[39;00m\n\u001b[1;32m--> 378\u001b[0m data, feature_names, feature_types \u001b[39m=\u001b[39m _maybe_pandas_data(data,\n\u001b[0;32m    379\u001b[0m                                                         feature_names,\n\u001b[0;32m    380\u001b[0m                                                         feature_types)\n\u001b[0;32m    382\u001b[0m data, feature_names, feature_types \u001b[39m=\u001b[39m _maybe_dt_data(data,\n\u001b[0;32m    383\u001b[0m                                                     feature_names,\n\u001b[0;32m    384\u001b[0m                                                     feature_types)\n\u001b[0;32m    385\u001b[0m label \u001b[39m=\u001b[39m _maybe_pandas_label(label)\n",
+      "File \u001b[1;32mc:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\xgboost\\core.py:239\u001b[0m, in \u001b[0;36m_maybe_pandas_data\u001b[1;34m(data, feature_names, feature_types)\u001b[0m\n\u001b[0;32m    234\u001b[0m     bad_fields \u001b[39m=\u001b[39m [data\u001b[39m.\u001b[39mcolumns[i] \u001b[39mfor\u001b[39;00m i, dtype \u001b[39min\u001b[39;00m\n\u001b[0;32m    235\u001b[0m                   \u001b[39menumerate\u001b[39m(data_dtypes) \u001b[39mif\u001b[39;00m dtype\u001b[39m.\u001b[39mname \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m PANDAS_DTYPE_MAPPER]\n\u001b[0;32m    237\u001b[0m     msg \u001b[39m=\u001b[39m \u001b[39m\"\"\"\u001b[39m\u001b[39mDataFrame.dtypes for data must be int, float or bool.\u001b[39m\n\u001b[0;32m    238\u001b[0m \u001b[39m            Did not expect the data types in fields \u001b[39m\u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m--> 239\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(msg \u001b[39m+\u001b[39m \u001b[39m'\u001b[39;49m\u001b[39m, \u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m.\u001b[39;49mjoin(bad_fields))\n\u001b[0;32m    241\u001b[0m \u001b[39mif\u001b[39;00m feature_names \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    242\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(data\u001b[39m.\u001b[39mcolumns, MultiIndex):\n",
+      "\u001b[1;31mTypeError\u001b[0m: sequence item 0: expected str instance, int found"
+     ]
+    }
+   ],
+   "source": [
+    "xgboost = XGBClassifier(random_state=1337)\n",
+    "xgboost.fit(X_train.to_numpy(), y_train)\n",
     "\n",
-    "    plt.title('Receiver Operating Characteristic')\n",
-    "    plt.plot(fpr, tpr, 'b', label = 'AUC = %0.2f' % roc_auc)\n",
-    "    plt.legend(loc = 'lower right')\n",
-    "    plt.plot([0, 1], [0, 1],'r--')\n",
-    "    plt.xlim([0, 1])\n",
-    "    plt.ylim([0, 1])\n",
-    "    plt.ylabel('True Positive Rate')\n",
-    "    plt.xlabel('False Positive Rate')\n",
-    "    plt.show()"
+    "y_pred_train = xgboost.predict(X_train)\n",
+    "y_pred_test = xgboost.predict(X_test)\n",
+    "\n",
+    "print('Accuracy on train-set: ', accuracy_score(y_true = y_train, y_pred = y_pred_train))\n",
+    "print('Accuracy on test-set: ', accuracy_score(y_true = y_test, y_pred = y_pred_test))"
    ]
   },
   {
