--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -305,6 +305,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Get Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_confusion_matrix(y_test, y_pred_test):\n",
+    "    pd.DataFrame(metrics.confusion_matrix(y_test, y_pred_test),\n",
+    "                columns=['Predicted Not Poisonous', 'Predicted Poisonous'],\n",
+    "                index=['True Not Poisonous', 'True Poisonous']\n",
+    "                )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Random Forest"
    ]
   },
@@ -405,19 +425,6 @@
    "source": [
     "threshold_random_forest = plotAUROC(random_forest, X_test, y_test)\n",
     "threshold_xgboost = plotAUROC(xgboost, X_test.to_numpy(), y_test.to_numpy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_confusion_matrix(y_test, y_pred_test):\n",
-    "    pd.DataFrame(metrics.confusion_matrix(y_test, y_pred_test),\n",
-    "                columns=['Predicted Not Poisonous', 'Predicted Poisonous'],\n",
-    "                index=['True Not Poisonous', 'True Poisonous']\n",
-    "                )"
    ]
   }
  ],
